# astronomical-events

./: .env.example  .gitignore  README.md  SKILL.md  pyproject.toml
docs/: DEPLOYMENT.md  I18N_PLAN.md  PLAN.md
scripts/: astronomical-events.service  main.py
src/: __init__.py  cache.py  classifier.py  dashboard.py  db_manager.py  event_parser.py  mastodon_client.py  mastodon_poster.py  notification.py  page_scraper.py  retry.py  rss_fetcher.py  scheduler.py  telegram_notifier.py  translate.py  translator.py
tests/: __init__.py  conftest.py  test_cache.py  test_classifier.py  test_db_integration.py  test_db_manager.py  test_event_parser.py  test_i18n_integration.py  test_notification_format.py  test_page_scraper.py  test_retry.py  test_rss_fetcher.py  test_translate.py
